@@ -55,7 +55,7 @@ totest['blank'] = [
         ["", 
         r""".\" Man page generated from reStructuredText.
 .
-.TH   "" "" ""
+.TH ""  "" "" ""
 .SH NAME
  \- 
 """+indend_macros+
@@ -71,7 +71,7 @@ r""".\" Generated by docutils manpage writer.
 """,
         r""".\" Man page generated from reStructuredText.
 .
-.TH HELLO, WORLD.  "" "" ""
+.TH "HELLO, WORLD."  "" "" ""
 .SH NAME
 Hello, world. \- 
 """+indend_macros+
@@ -147,7 +147,7 @@ and . in a line and at line start
 """, 
         r""".\" Man page generated from reStructuredText.
 .
-.TH SIMPLE 1 "2009-08-05" "0.1" "text processing"
+.TH "SIMPLE" 1 "2009-08-05" "0.1" "text processing"
 .SH NAME
 simple \- The way to go
 """+indend_macros+
@@ -228,7 +228,7 @@ totest['table'] = [
 '''\
 .\\" Man page generated from reStructuredText.
 .
-.TH   "" "" ""
+.TH ""  "" "" ""
 .SH NAME
  \\- \n\
 '''+indend_macros+
@@ -286,7 +286,7 @@ $
         """\
 .\\" Man page generated from reStructuredText.
 .
-.TH   "" "" ""
+.TH ""  "" "" ""
 .SH NAME
  \\- \n\
 """+indend_macros+
@@ -343,7 +343,7 @@ Section
 '''\
 .\\" Man page generated from reStructuredText.
 .
-.TH DEFINITION LIST TEST  "" "" ""
+.TH "DEFINITION LIST TEST"  "" "" ""
 .SH NAME
 Definition List Test \\- \n\
 '''+indend_macros+
@@ -372,7 +372,7 @@ totest['cmdlineoptions'] = [
 """, 
         r""".\" Man page generated from reStructuredText.
 .
-.TH   "" "" ""
+.TH ""  "" "" ""
 .SH NAME
  \- 
 """+indend_macros+
